Fix miss-directing links on README.md. Fix cropping on gallery and projects images. Fix styling on inspiration images.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,7 @@ h3 {
     font-family: 'Caveat', cursive;
 }
 
+/* enhances the UX by providing feedback when the cursor is over the icon */
 .navlink:hover {
     border-bottom: 2px solid #fdf9ee;
 }
@@ -115,6 +116,7 @@ h3 {
     font-style: italic;
 }
 
+/* enhances the UX by providing feedback when the cursor is over the icon */
 #getintouch-link:hover {
     border-bottom: 1px solid #1B3D2F;
 }
@@ -178,7 +180,7 @@ h3 {
     max-height: 350px;
     margin: 20px 20px 0px 0px;
     overflow: hidden;
-    border-radius: 4%;
+    border-radius: 40px;
 }
 
 #about-us-image > img {
@@ -314,7 +316,7 @@ h3 {
     box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.9);
 }
 
-/* projects slideshow */
+/* projects slideshow - slider inspiration from https://gist.github.com/zhilinskiy/4603199 - */
 
 .slider {
 	width: 50%; 
@@ -418,7 +420,7 @@ h3 {
 #inspiration img {
     width: 300px;
     height: auto;
-    border-radius: 4%;
+    border-radius: 40px;
 }
 
 #inspiration h3 {
@@ -534,6 +536,7 @@ iframe {
     position: absolute;
     right: 8%;
     border-radius: 10px;
+    box-shadow: 0 10px 20px -5px rgb(0 0 0 / 60%);
 }
 
 /* changes the default placeholder text to match that of the site */
@@ -562,6 +565,7 @@ iframe {
     width: 250px;
     background-color: #fdf9ee;
     border-radius: 10px;
+    box-shadow: 0 10px 20px -5px rgb(0 0 0 / 60%);
 }
 
 .callback-input {
@@ -569,6 +573,7 @@ iframe {
     height: 20px;
     width: 20px;
     margin-left: 30px;
+    box-shadow: 0 10px 20px -5px rgb(0 0 0 / 60%);
 }
 
 #design-query-form > h2 {
@@ -586,7 +591,9 @@ iframe {
     left: 45%;
     bottom: 15px;
     border-radius: 10px;
+    box-shadow: 0 10px 20px -5px rgb(0 0 0 / 60%);
 }
+
 /* enhances the UX by providing feedback when the cursor is over the submit button */
 #submit:hover {
     border: 3px solid #fdf9ee;
@@ -655,6 +662,7 @@ footer > h3 {
     border: 2px solid rgba(253, 249, 238, 0.6);
 }
 
+/* enhances the UX by providing feedback when the cursor is over the icon */
 #up-arrow:hover {
     color: #1b3d2f;
 }
